tests/e2e/pass/v8_global_scalar_let.ep
# EXIT: 67
let g: i64 = 1
let flag = true
let ch: u8 = 'A'

fun main(): i64 {
    g = 2
    if flag {
        ret g + i64(ch)
    }
    ret 0
}