tests/e2e/fail/integer_i64_u8_mixed.ep
# COMPILE_ERROR: operator + has incompatible operand types u8 and i64
fun main(): void {
    let byte = 'A'
    let wide = 1i64
    os.ExitProcess(i64(byte + wide))
}
